--- a/lab-01-scale-out-tfserving/tf-serving/tfserving-service.yaml
+++ b/lab-01-scale-out-tfserving/tf-serving/tfserving-service.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: tf-serving
 spec:
-  #type: ClusterIP
-  type: LoadBalancer
+  type: ClusterIP
+  #type: LoadBalancer
   ports:
   - port: 8500
     protocol: TCP
