--- a/lab-01-scale-out-tfserving/load-client/manifests/kustomization.yaml
+++ b/lab-01-scale-out-tfserving/load-client/manifests/kustomization.yaml
@@ -1,10 +1,10 @@
-# Copyright 2020 Google Inc. All rights reserved.
+# Copyright 2019 Google Inc. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#            http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,9 +12,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 
-FROM locustio/locust
-WORKDIR /tasks
-COPY tasks.py .
-RUN pip install -U google-auth google-cloud-storage google-cloud-logging python-dotenv
+resources:
+- locust-master.yaml
+- locust-worker.yaml
+- locust-master-service.yaml
 
+images:
+- name: locustio/locust
+  newName: gcr.io/mlops-dev-env/locust:latest
+
+replicas:
+- name: locust-worker
+  count: 32
+    
+patches:
+- path: patch.yaml
+  target:
+    kind: Deployment
