--- a/lab-01-scale-out-tfserving/tf-serving/tfserving-resources.yaml
+++ b/lab-01-scale-out-tfserving/tf-serving/tfserving-resources.yaml
@@ -22,9 +22,9 @@ spec:
       containers:
       - name: tf-serving
         resources:
-          limits:
-            cpu: "3.5"
-            memory: 11Gi
+#          limits:
+#            cpu: "3.5"
+#            memory: 11Gi
           requests:
-            cpu: "3.5"
-            memory: 11Gi
+            cpu: "3"
+            memory: 4Gi
