--- a/lab-01-scale-out-tfserving/tf-serving/tfserving-hpa.yaml
+++ b/lab-01-scale-out-tfserving/tf-serving/tfserving-hpa.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 apiVersion: autoscaling/v1
+#apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: tf-serving
@@ -22,6 +23,6 @@ spec:
     kind: Deployment
     name: tf-serving
   minReplicas: 1
-  maxReplicas: 3
-  targetCPUUtilizationPercentage: 50
+  maxReplicas: 6
+  targetCPUUtilizationPercentage: 60
     
