--- a/lab-01-scale-out-tfserving/tf-serving-on-gke/step-by-step/tfserving-hpa.yaml
+++ b/lab-01-scale-out-tfserving/tf-serving-on-gke/step-by-step/tfserving-hpa.yaml
@@ -12,16 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: autoscaling/v1
+#apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
 metadata:
   name: tf-serving
 spec:
-  template:
-    spec:
-      containers:
-      - name: tf-serving
-        resources:
-          requests:
-            cpu: "3"
-            memory: 4Gi
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: tf-serving
+  minReplicas: 1
+  maxReplicas: 4
+  targetCPUUtilizationPercentage: 60
+    
