--- a/lab-01-tfserving-gke-autoscaling/tf-serving-on-gke/step-by-step/tfserving-deployment.yaml
+++ b/lab-01-tfserving-gke-autoscaling/tf-serving-on-gke/step-by-step/tfserving-deployment.yaml
@@ -34,7 +34,7 @@ spec:
                 - tf-serving   
       containers:
       - name: tf-serving
-        image: "tensorflow/serving"
+        image: "tensorflow/serving:2.3.0"
         args: 
         - "--model_name=$(MODEL_NAME)"
         - "--model_base_path=$(MODEL_PATH)" 
