--- a/lab-01-tfserving-gke-autoscaling/locust/manifests/locust-master.yaml
+++ b/lab-01-tfserving-gke-autoscaling/locust/manifests/locust-master.yaml
@@ -29,6 +29,15 @@ spec:
       labels:
         app: locust-master
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: cloud.google.com/gke-nodepool
+                operator: In
+                values:
+                - default-pool    
       containers:
         - image: locustio/locust
           name: locust-master
