--- a/lab-01-tfserving-gke-autoscaling/locust/manifests/locust-worker.yaml
+++ b/lab-01-tfserving-gke-autoscaling/locust/manifests/locust-worker.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     name: locust-worker
 spec:
-  replicas: 1
+  replicas: 32
   selector:
     matchLabels:
       app: locust-worker
@@ -28,6 +28,15 @@ spec:
       labels:
         app: locust-worker
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: cloud.google.com/gke-nodepool
+                operator: In
+                values:
+                - default-pool    
       containers:
         - image: locustio/locust
           name: locust-worker
