--- a/lab-01-tfserving-gke-autoscaling/tf-serving/tfserving-deployment.yaml
+++ b/lab-01-tfserving-gke-autoscaling/tf-serving/tfserving-deployment.yaml
@@ -29,15 +29,15 @@ spec:
       labels:
         app: tf-serving
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: cloud.google.com/gke-nodepool
-                operator: In
-                values:
-                - tf-serving   
+  #    affinity:
+  #      nodeAffinity:
+  #        requiredDuringSchedulingIgnoredDuringExecution:
+  #          nodeSelectorTerms:
+  #          - matchExpressions:
+  #            - key: cloud.google.com/gke-nodepool
+  #              operator: In
+  #              values:
+  #              - tf-serving   
       containers:
       - name: tf-serving
         image: "tensorflow/serving:2.3.0"
