--- a/lab-01-tfserving-gke-autoscaling/tf-serving/tfserving-deployment.yaml
+++ b/lab-01-tfserving-gke-autoscaling/tf-serving/tfserving-deployment.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: tf-serving
-        image: "gcr.io/mlops-dev-env/tf-serving"
+        image: "tensorflow/serving"
         args: 
         - "--model_name=$(MODEL_NAME)"
         - "--model_base_path=$(MODEL_PATH)" 
