--- a/lab-02-tfserving-gke-canary/tf-serving.old/tfserving-deployment.yaml
+++ b/lab-02-tfserving-gke-canary/tf-serving.old/tfserving-deployment.yaml
@@ -1,17 +1,3 @@
-# Copyright 2020 Google Inc. All Rights Reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#            http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -29,6 +15,15 @@ spec:
       labels:
         app: tf-serving
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: cloud.google.com/gke-nodepool
+                operator: In
+                values:
+                - tf-serving 
       containers:
       - name: tf-serving
         image: "tensorflow/serving"
@@ -54,7 +49,6 @@ spec:
           protocol: TCP
         resources:
           requests:
-            cpu: "3"
+            cpu: "3.5"
             memory: 4Gi
-        
 
