--- a/lab-02-tfserving-gke-canary/tf-serving/tfserving-deployment.yaml
+++ b/lab-02-tfserving-gke-canary/tf-serving/tfserving-deployment.yaml
@@ -15,26 +15,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tf-serving
+  name: image-classifier-resnet101
   namespace: default
   labels:
-    app: tf-serving
+    app: image-classifier
+    version: resnet101
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tf-serving
+      app: image-classifier
+      version: resnet101
   template:
     metadata:
       labels:
-        app: tf-serving
+        app: image-classifier
+        version: resnet101
     spec:
       containers:
       - name: tf-serving
         image: "tensorflow/serving"
         args: 
         - "--model_name=$(MODEL_NAME)"
-        - "--model_base_path=$(MODEL_PATH)" 
+        - "--model_base_path=$(RESNET101_PATH)" 
         envFrom:
         - configMapRef:
             name: tfserving-configs
@@ -60,26 +63,29 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tf-serving
+  name: image-classifier-resnet50
   namespace: default
   labels:
-    app: tf-serving
+    app: image-classifier
+    version: resnet101
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tf-serving
+      app: image-classifier
+      version: resnet101
   template:
     metadata:
       labels:
-        app: tf-serving
+        app: image-classifier
+        version: resnet101
     spec:
       containers:
       - name: tf-serving
         image: "tensorflow/serving"
         args: 
         - "--model_name=$(MODEL_NAME)"
-        - "--model_base_path=$(MODEL_PATH)" 
+        - "--model_base_path=$(RESNET50_PATH)" 
         envFrom:
         - configMapRef:
             name: tfserving-configs
