--- a/lab-02-tfserving-gke-canary/tf-serving/service.yaml
+++ b/lab-02-tfserving-gke-canary/tf-serving/service.yaml
@@ -21,8 +21,7 @@ metadata:
     app: image-classifier
     service: image-classifier
 spec:
-  #type: ClusterIP
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 8500
     protocol: TCP
