--- a/lab-02-tfserving-gke-canary/tf-serving/configmap-resnet50.yaml
+++ b/lab-02-tfserving-gke-canary/tf-serving/configmap-resnet50.yaml
@@ -13,21 +13,9 @@
 # limitations under the License.
 
 apiVersion: v1
-kind: Service
+kind: ConfigMap
 metadata:
-  name: image-classifier
-  namespace: default
-  labels:
-    app: image-classifier
-    service: image-classifier
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 8500
-    protocol: TCP
-    name: tf-serving-grpc
-  - port: 8501
-    protocol: TCP
-    name: tf-serving-http
-  selector:
-    app: image-classifier
+  name: resnet50-configs
+data:
+  MODEL_NAME: image_classifier
+  MODEL_PATH: gs://labs-workspace/models/resnet_50
