--- a/lab-02-tfserving-gke-canary/tf-serving/deployment-resnet101.yaml
+++ b/lab-02-tfserving-gke-canary/tf-serving/deployment-resnet101.yaml
@@ -37,10 +37,10 @@ spec:
         image: "tensorflow/serving"
         args: 
         - "--model_name=$(MODEL_NAME)"
-        - "--model_base_path=$(RESNET101_PATH)" 
+        - "--model_base_path=$(MODEL_PATH)" 
         envFrom:
         - configMapRef:
-            name: tfserving-configs
+            name: resnet101-configs
         imagePullPolicy: IfNotPresent
         readinessProbe:
           tcpSocket:
@@ -59,52 +59,3 @@ spec:
           requests:
             cpu: "3"
             memory: 4Gi
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: image-classifier-resnet50
-  namespace: default
-  labels:
-    app: image-classifier
-    version: resnet50
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: image-classifier
-      version: resnet50
-  template:
-    metadata:
-      labels:
-        app: image-classifier
-        version: resnet50
-    spec:
-      containers:
-      - name: tf-serving
-        image: "tensorflow/serving"
-        args: 
-        - "--model_name=$(MODEL_NAME)"
-        - "--model_base_path=$(RESNET50_PATH)" 
-        envFrom:
-        - configMapRef:
-            name: tfserving-configs
-        imagePullPolicy: IfNotPresent
-        readinessProbe:
-          tcpSocket:
-            port: 8500
-          initialDelaySeconds: 10
-          periodSeconds: 5
-          failureThreshold: 10
-        ports:
-        - name: http
-          containerPort: 8501
-          protocol: TCP
-        - name: grpc
-          containerPort: 8500
-          protocol: TCP
-        resources:
-          requests:
-            cpu: "3"
-            memory: 4Gi
-
